grid tile buton finished

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     
 </head>
 <body>
+ <section class="tableau">   
     <div class="grid">
         <div class="tile">
             <img class="icon" src="beer.svg">
-            <p class="text">Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
-            <button type="button">Click Me!</button>
+            <p class="text"> Lorem ipsum  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
+            <button class="button"type="button">Learn more</button>
         </div>
     
         <div class="tile">
@@ -57,6 +58,6 @@
             <button type="button">Click Me!</button>
         </div>                       
      </div>   
- 
+ </section>
 </body>
 </html>
