--- a/index.html
+++ b/index.html
@@ -20,42 +20,42 @@
     <div class="grid">
         <div class="tile">
             <img class="icon" src="beer.svg">
-            <p class="text"> Lorem ipsum  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
+            <p class="text"> <span class=titre>Lorem ipsum</span>  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
             <button class="button"type="button">Learn more</button>
         </div>
         <div class="tile">
             <img class="icon" src="cherry.svg">
-            <p class="text"> Lorem ipsum  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
+            <p class="text"> <span class=titre>Lorem ipsum</span>  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
             <button class="button"type="button">Learn more</button>
         </div>
         <div class="tile">
             <img class="icon" src="drumstick.svg">
-            <p class="text"> Lorem ipsum  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
+            <p class="text"> <span class=titre>Lorem ipsum</span>  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
             <button class="button"type="button">Learn more</button>
         </div>
         <div class="tile">
             <img class="icon" src="hamburger-soda.svg">
-            <p class="text"> Lorem ipsum  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
+            <p class="text"> <span class=titre>Lorem ipsum</span>  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
             <button class="button"type="button">Learn more</button>
         </div>    
         <div class="tile">
             <img class="icon" src="pepper-hot.svg">
-            <p class="text"> Lorem ipsum  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
+            <p class="text"> <span class=titre>Lorem ipsum</span>  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
             <button class="button"type="button">Learn more</button>
         </div>    
         <div class="tile">
             <img class="icon" src="shrimp.svg">
-            <p class="text"> Lorem ipsum  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
+            <p class="text"> <span class=titre>Lorem ipsum</span>  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
             <button class="button"type="button">Learn more</button>
         </div>
         <div class="tile">
             <img class="icon" src="sushi.svg">
-            <p class="text"> Lorem ipsum  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
+            <p class="text"> <span class=titre>Lorem ipsum</span>  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
             <button class="button"type="button">Learn more</button>
         </div>
         <div class="tile">
             <img class="icon" src="wheat.svg">
-            <p class="text"> Lorem ipsum  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
+            <p class="text"> <span class=titre>Lorem ipsum</span>  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
             <button class="button"type="button">Learn more</button>
         </div>    
      </div>   
