--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <header>
     <ul class="list">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="https://www.mcdonalds.be/fr">Home</a></li>
+        <li><a href="https://www.quick.be/fr">News</a></li>
+        <li><a href="#https://burgerking.be/fr/">Contact</a></li>
         <li class="about"><button class="collapsible">Burger</button></li>
       </ul>
 </header>
