discover identation shortcut in vscode...

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>grid</title>
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
 <header>
     <ul class="list">
@@ -13,52 +14,62 @@
         <li><a href="https://www.quick.be/fr">News</a></li>
         <li><a href="#https://burgerking.be/fr/">Contact</a></li>
         <li class="about"><button class="collapsible">Burger</button></li>
-      </ul>
+    </ul>
 </header>
+
 <body>
- <section class="tableau">   
-    <div class="grid">
-        <div class="tile">
-            <img class="icon" src="beer.svg">
-            <p class="text"> <span class=titre>Lorem ipsum</span>  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
-            <button class="button"type="button">Learn more</button>
+    <section class="tableau">
+        <div class="grid">
+            <div class="tile">
+                <img class="icon" src="beer.svg">
+                <p class="text"> <span class=titre>Lorem ipsum</span> Debitis! Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
+                <button class="button" type="button">Learn more</button>
+            </div>
+            <div class="tile">
+                <img class="icon" src="cherry.svg">
+                <p class="text"> <span class=titre>Lorem ipsum</span> Debitis! Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
+                <button class="button" type="button">Learn more</button>
+            </div>
+            <div class="tile">
+                <img class="icon" src="drumstick.svg">
+                <p class="text"> <span class=titre>Lorem ipsum</span> Debitis! Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
+                <button class="button" type="button">Learn more</button>
+            </div>
+            <div class="tile">
+                <img class="icon" src="hamburger-soda.svg">
+                <p class="text"> <span class=titre>Lorem ipsum</span> Debitis! Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
+                <button class="button" type="button">Learn more</button>
+            </div>
+            <div class="tile">
+                <img class="icon" src="pepper-hot.svg">
+                <p class="text"> <span class=titre>Lorem ipsum</span> Debitis! Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
+                <button class="button" type="button">Learn more</button>
+            </div>
+            <div class="tile">
+                <img class="icon" src="shrimp.svg">
+                <p class="text"> <span class=titre>Lorem ipsum</span> Debitis! Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
+                <button class="button" type="button">Learn more</button>
+            </div>
+            <div class="tile">
+                <img class="icon" src="sushi.svg">
+                <p class="text"> <span class=titre>Lorem ipsum</span> Debitis! Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
+                <button class="button" type="button">Learn more</button>
+            </div>
+            <div class="tile">
+                <img class="icon" src="wheat.svg">
+                <p class="text"> <span class=titre>Lorem ipsum</span> Debitis! Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
+                <button class="button" type="button">Learn more</button>
+            </div>
         </div>
-        <div class="tile">
-            <img class="icon" src="cherry.svg">
-            <p class="text"> <span class=titre>Lorem ipsum</span>  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
-            <button class="button"type="button">Learn more</button>
-        </div>
-        <div class="tile">
-            <img class="icon" src="drumstick.svg">
-            <p class="text"> <span class=titre>Lorem ipsum</span>  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
-            <button class="button"type="button">Learn more</button>
-        </div>
-        <div class="tile">
-            <img class="icon" src="hamburger-soda.svg">
-            <p class="text"> <span class=titre>Lorem ipsum</span>  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
-            <button class="button"type="button">Learn more</button>
-        </div>    
-        <div class="tile">
-            <img class="icon" src="pepper-hot.svg">
-            <p class="text"> <span class=titre>Lorem ipsum</span>  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
-            <button class="button"type="button">Learn more</button>
-        </div>    
-        <div class="tile">
-            <img class="icon" src="shrimp.svg">
-            <p class="text"> <span class=titre>Lorem ipsum</span>  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
-            <button class="button"type="button">Learn more</button>
-        </div>
-        <div class="tile">
-            <img class="icon" src="sushi.svg">
-            <p class="text"> <span class=titre>Lorem ipsum</span>  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
-            <button class="button"type="button">Learn more</button>
-        </div>
-        <div class="tile">
-            <img class="icon" src="wheat.svg">
-            <p class="text"> <span class=titre>Lorem ipsum</span>  Debitis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet Lorem ipsum dolor sit.</p>
-            <button class="button"type="button">Learn more</button>
-        </div>    
-     </div>   
- </section>
+    </section>
 </body>
+
 </html>
